fixed layout margins not matching on mobile devices 2

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   position: fixed;
   width: 100%;
+  height: 100%;
 }
 
 #content {
